# controller/transfer-controller.js
@@ -1,3 +1,5 @@
+const { ObjectId } = require("mongodb");
+
 const getAllTransfers = async (req, res) => {
   try {
     const transfers = await req.db.collection("transfers").find().toArray();
@@ -15,11 +17,12 @@ const getAllTransfers = async (req, res) => {
 
 const createTransfers = async (req, res) => {
   const { amount, information } = req.body;
+  const status = "pending";
 
   try {
     const newTransfer = await req.db
       .collection("transfers")
-      .insertOne({ amount, information });
+      .insertOne({ amount, information, status });
 
     res.status(201).json({
       Message: "Transfer successfully created 💰",
@@ -32,4 +35,40 @@ const createTransfers = async (req, res) => {
   }
 };
 
-module.exports = { getAllTransfers, createTransfers };
+const approveTransfer = async (req, res) => {
+  // Ensure the user has the 'approver' role before proceeding
+  const { role } = req.user;
+  if (role !== "approver") {
+    return res.status(403).json({
+      Message: "Only approvers can approve transfers",
+    });
+  }
+
+  // Retrieve the transfer ID and update the status to 'approved'
+  const { transferId } = req.body;
+
+  try {
+    const result = await req.db
+      .collection("transfers")
+      .updateOne(
+        { _id: new ObjectId(transferId) },
+        { $set: { status: "approved" } }
+      );
+
+    if (result.modifiedCount === 0) {
+      return res.status(404).json({
+        Message: "Transfer not found",
+      });
+    }
+
+    res.status(200).json({
+      Message: "Transfer request approved ✅",
+    });
+  } catch (error) {
+    res.status(500).json({
+      Message: error.message,
+    });
+  }
+};
+
+module.exports = { getAllTransfers, createTransfers, approveTransfer };
